@@ -1,5 +1,6 @@
 v1.0.2
 Convert listings in batch using ajax to fix timeout issue when converting large number of listings - FIXED
+Empty custom field names breaks the GeoTheme to GeoDirectory conversion process - FIXED
 
 v1.0.1
 Link business to event saving to wrong DB column - FIXED
